--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr class="whiteRow">
                         <td>Lose a horse</td>
-                        <td>Maybe</td>
+                        <td><i class="farmer">Maybe</i></td>
                     </tr>
                     <tr>
                         <td>Win more horses</td>
-                        <td>Maybe</td>
+                        <td><i class="farmer">Maybe</i></td>
                     </tr>
-                    <tr>
+                    <tr class="whiteRow">
                         <td>Son injury</td>
-                        <td>Maybe</td>
+                        <td><i class="farmer">Maybe</i></td>
                     </tr>
                     <tr>
                         <td>Avoid war</td>
-                        <td>Maybe</td>
+                        <td><i class="farmer">Maybe</i></td>
                     </tr>
                 </tbody>
             </table>
